// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OakAccordion matches snapshot 1`] = `
.c0 {
  padding: 1rem;
  background: #f2f2f2;
  border: 0.063rem solid;
  border-color: #cacaca;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  margin-right: 1rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  margin-left: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  margin-left: 1.5rem;
  margin-top: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  object-fit: contain;
}

.c5 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  padding: 0;
}

.c6 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c6:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

<div>
  <div
    class="c0"
    id="see-more"
  >
    <h3
      class="c1 c2"
    >
      <button
        aria-expanded="true"
        class="c3 c4 c5  c6"
        id="see-more"
        type="button"
      >
        <span
          class="c7"
          style="transform: rotate(180deg);"
        >
          <img
            alt=""
            class="c8"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953557/icons/botfld6brychmttwtv6u.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
        See more
      </button>
      <div
        class="c9 c2"
      >
        After
      </div>
    </h3>
    <div
      aria-labelledby="see-more"
      class="c10"
      role="region"
    >
      Here it is
    </div>
  </div>
</div>
`;

exports[`OakAccordion matches snapshot with chevronPosition right 1`] = `
.c0 {
  padding: 1rem;
  background: #f2f2f2;
  border: 0.063rem solid;
  border-color: #cacaca;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  margin-left: auto;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  padding-left: 0rem;
  margin-left: 0rem;
  margin-top: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  object-fit: contain;
}

.c5 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  padding: 0;
}

.c6 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c6:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

<div>
  <div
    class="c0"
    id="see-more"
  >
    <h3
      class="c1 c2"
    >
      <button
        aria-expanded="true"
        class="c3 c4 c5  c6"
        id="see-more"
        type="button"
      >
        See more
        <span
          class="c7"
          style="transform: rotate(180deg);"
        >
          <img
            alt=""
            class="c8"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953557/icons/botfld6brychmttwtv6u.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </button>
    </h3>
    <div
      aria-labelledby="see-more"
      class="c9"
      role="region"
    >
      Here it is
    </div>
  </div>
</div>
`;

exports[`OakAccordion matches snapshot with custom $color 1`] = `
.c0 {
  padding: 1rem;
  background: #f2f2f2;
  border: 0.063rem solid;
  border-color: #cacaca;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  color: #ffffff;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  margin-right: 1rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  padding-left: 1rem;
  margin-left: 1.5rem;
  margin-top: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c5 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  padding: 0;
}

.c6 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c6:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

<div>
  <div
    class="c0"
    id="see-more"
  >
    <h3
      class="c1 c2"
    >
      <button
        aria-expanded="true"
        class="c3 c4 c5  c6"
        id="see-more"
        type="button"
      >
        <span
          class="c7"
          style="transform: rotate(180deg);"
        >
          <img
            alt=""
            class="c8"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953557/icons/botfld6brychmttwtv6u.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
        See more
      </button>
    </h3>
    <div
      aria-labelledby="see-more"
      class="c9"
      role="region"
    >
      Here it is
    </div>
  </div>
</div>
`;

exports[`OakAccordion matches snapshot with custom openBackground 1`] = `
.c0 {
  padding: 1rem;
  background: #bef2bd;
  border: 0.063rem solid;
  border-color: #cacaca;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c3:hover {
  cursor: pointer;
}

.c7 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  margin-right: 1rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  padding-left: 1rem;
  margin-left: 1.5rem;
  margin-top: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  object-fit: contain;
}

.c5 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  padding: 0;
}

.c6 {
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.c6:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

<div>
  <div
    class="c0"
    id="see-more"
  >
    <h3
      class="c1 c2"
    >
      <button
        aria-expanded="true"
        class="c3 c4 c5  c6"
        id="see-more"
        type="button"
      >
        <span
          class="c7"
          style="transform: rotate(180deg);"
        >
          <img
            alt=""
            class="c8"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953557/icons/botfld6brychmttwtv6u.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
        See more
      </button>
    </h3>
    <div
      aria-labelledby="see-more"
      class="c9"
      role="region"
    >
      Here it is
    </div>
  </div>
</div>
`;
